
import "google/protobuf/timestamp.proto";

syntax = "proto3";

service SimpleService {
  rpc Estadistica (EstadisticaRequest) returns (EstadisticaResponse);
}

message EstadisticaRequest {
  string tareas = 1;
}

message EstadisticaResponse {
  double cantidad = 1;
  double cantidad_realizadas = 2;
  double cantidad_hoy = 3;
  double cantidad_prioridad_alta = 4;
}